--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
         </div>
       </main>
       <footer>
-        <p>
-          This project was coded by
-          <a href="#" target="_blank">Hima Bindu</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
-        </p>
+       <footer>
+  <p>
+    This project was coded by
+    <a href="#" target="_blank">Hima Bindu</a> and is
+    <a href="https://github.com/himabindukarna/updatesofclimate" target="_blank">on GitHub</a> and
+    <a href="https://updatesofclimate.netlify.app" target="_blank">hosted on Netlify</a>
+  </p>
+</footer>
+
       </footer>
     </div>
   </body>
